# elections-programs

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  makefile  pyproject.toml
http-client/: chat.http  http-client.env.json  store.http
k8s/: deployment.yml  persistent_volume.yml  persistent_volume_claim.yml  secret.yaml  service.yml
src/chat/: ai_assistant.py  party.py  prompt.py
src/store/: vector_store.py  vectore_store.py
src/webapp/: auth.py  config.py  exception_handlers.py  logging_config.py  main.py  properties.py  test_main.http
src/webapp/api/: chat.py  middleware.py
src/webapp/routers/: chat.py  store.py
tests/webapp/: test_chat.py  test_chat_acceptance.py  test_programs_chat.py  test_store_acceptance.py
