[tool.poetry]
name = "elections-programs"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-community = "^0.3.15"
langchain-faiss = "0.1.1"
langchain-huggingface = "0.1.2"
faiss-cpu = "1.9.0"
pypdf = "5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src"
