[tool.poetry]
name = "elections-programs"
version = "0.0.1"
packages = [
    { include = "webapp", from = "src"},
    { include = "src/" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-community = "^0.3.15"
langchain-faiss = "0.1.1"
langchain-openai = "0.3.4"
faiss-cpu = "1.9.0"
pypdf = "5.1.0"
sentencepiece = "^0.2.0"
protobuf = "^5.29.3"
lingua-language-detector = "2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
